Fixed Dashboard (no longer hidden under navbar) but background still needs to be changed to fit full page

--- a/liftOff/src/app/dashboard/dashboard.component.css
+++ b/liftOff/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 body {
 	content:"";
-	position:fixed;
+	position:static;
 	left:0;
 	top:0;
 	right:0;
